--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>app</groupId>
 	<artifactId>app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<!-- <packaging>war</packaging> -->
 	<name>app</name>
 	<description>Spring Test Server App</description>
 	<url/>
@@ -34,6 +35,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- <dependency>
+    		<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-starter-tomcat</artifactId>
+    		<scope>provided</scope>
+		</dependency> -->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
