--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,3 +5,15 @@ server.port=8100
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.root=INFO
+
+# Default active profile (can be overridden by SPRING_PROFILES_ACTIVE environment variable or --spring.profiles.active parameter)
+spring.profiles.active=dev
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+spring.jpa.database=mysql
+
