--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 # Production Database Configuration
-spring.datasource.url=jdbc:mysql://production-db:3306/fullstack_prod
-spring.datasource.username=prod_user
-spring.datasource.password=prod_secure_password
+spring.datasource.url=jdbc:mysql://mysql-springboot.alwaysdata.net:3306/springboot_db
+spring.datasource.username=435081
+spring.datasource.password=ZbeqL9IzHP8&fXIiFm+M?pp
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
