trying to reduce the memory usage but not working

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,19 +1,9 @@
 spring.application.name=app
 server.port=8100
 
-
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.root=INFO
-
-# Default active profile (can be overridden by SPRING_PROFILES_ACTIVE environment variable or --spring.profiles.active parameter)
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.open-in-view=false
 
-spring.jpa.database=mysql
+
 
