--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,12 +1,17 @@
 # Development Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
+spring.datasource.url=jdbc:mariadb://localhost:3306/fullstack
 spring.datasource.username=springboot
 spring.datasource.password=javaisawesome
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-
+# Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB106Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.jpa.database=mysql
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.root=INFO
