--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,10 +8,11 @@
 		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>app</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>app</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>app</name>
-	<description>Spring Test Server App</description>
+	<description>Spring Boot App</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -34,25 +35,17 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-	<dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
 
 		<dependency>
-      		<groupId>org.springframework.boot</groupId>
-      			<artifactId>spring-boot-devtools</artifactId>
-      		<scope>runtime</scope>
-      		<optional>true</optional>
-    	</dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
-	
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -66,11 +59,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.4.0</version>
 			</plugin>
 		</plugins>
 	</build>
