working with registering users and login users

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.datasource.url=jdbc:mariadb://mysql-springboot.alwaysdata.net/springboot_
 spring.datasource.username=435081
 spring.datasource.password=ZbeqL9IzHP8&fXIiFm+M?pp
 
+# JWT Configuration
+jwt.secret=your-256-bit-secret-make-sure-to-change-this-in-production
+# JWT expiration time in milliseconds (24 hours)
+jwt.expiration=86400000
+
 # Enable schema.sql initialization
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
